added notes page and fixed meta elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta author="Bracken Hibbert" description="Site used for protfolio of work for wdd131 class">
+    <meta name="description" content="Site used for protfolio of work for wdd131 class">
+    <meta name="author" content="Bracken Hibbert">
     <title>Bracken Hibbert: WDD131 Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
