--- a/mission/index.html
+++ b/mission/index.html
@@ -7,10 +7,14 @@
     <meta name="author" content="Bracken Hibbert">
     <title>BYU-I Mission Statement</title>
     <link rel="stylesheet" href="style.css">
-    
+    <script src="mission.js" defer></script>
 </head>
-<body>
+<body class="dark">
     <header>
+        <label for="theme">Select a Theme</label>
+        <select id="theme" name="theme"></select>
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
         <h1>Mission Statement</h1>
         <h2>Brigham Young University-Idaho</h2>
     </header>
