added links to main index and created the coopics folder and inex

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <title>Bracken Hibbert: WDD131 Portfolio</title>
     </header>
     <main>
-
+        <a href="mission\index.html">Mission Statement</a>
+        <a href="Coolpics\index.html">Coolpics</a>
     </main>
     <footer>
 
