altered main index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <title>Bracken Hibbert: WDD131 Portfolio</title>
+        <h1>Bracken Hibbert: WDD131 Portfolio</h1>
     </header>
     <main>
         <a href="mission\index.html">Mission Statement</a>
