finished up the js for coolpics page

--- a/Coolpics/index.html
+++ b/Coolpics/index.html
@@ -10,16 +10,22 @@
     <script src="coolpics.js" defer></script>
 </head>
 <body>
+    <!-- <div class="viwer">
+        <button class="close-viewer">X</button>
+        <img src="" alt="">
+    </div> -->
     <header>
         <h1>Cool Pics 📷</h1>
-        <button>Menu</button>
-        <div class="navigation">
-            <a href="#HOME">Home</a>
-            <a href="#PEOPLE">People</a>
-            <a href="#PLACES">Places</a>
-            <a href="#ABOUT">About</a>
-            <a href="#CONTACT">Contact</a>
-        </div>
+        <button class="menuButton">Menu</button>
+        <nav class="hide">
+            <ol class="menu">
+                <li href="#HOME">Home</a>
+                <li href="#PEOPLE">People</a>
+                <li href="#PLACES">Places</a>
+                <li href="#ABOUT">About</a>
+                <li href="#CONTACT">Contact</a>
+            </ol>
+        </nav>
     </header>
 
     <main>
