started working on building a book blog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
         <a href="mission\index.html">Mission Statement</a>
         <a href="Coolpics\index.html">Coolpics</a>
+        <a href="blog\index.html">Book blog</a>
     </main>
     <footer>
 
