credit card form

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="mission\index.html">Mission Statement</a>
         <a href="Coolpics\index.html">Coolpics</a>
         <a href="blog\index.html">Book blog</a>
+        <a href="CreditCard/index.html">Credit Card Form</a>
     </main>
     <footer>
 
