Added favicons and finished the js for the registration form.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Bracken Hibbert">
     <title>Bracken Hibbert: WDD131 Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image">
 </head>
 <body>
     <header>
@@ -18,6 +19,7 @@
         <a href="Coolpics\index.html">Coolpics</a>
         <a href="blog\index.html">Book blog</a>
         <a href="CreditCard/index.html">Credit Card Form</a>
+        <a href="Register/index.html">Registration Form</a>
     </main>
     <footer>
 
