--- a/Coolpics/index.html
+++ b/Coolpics/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Bracken Hibbert">
     <title>CoolPics</title>
     <link rel="stylesheet" href="coolpics.css">
+    <link rel="icon" href="favicon.png" type="image">
     <script src="coolpics.js" defer></script>
 </head>
 <body>
