--- a/mission/index.html
+++ b/mission/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Bracken Hibbert">
     <title>BYU-I Mission Statement</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image">
     <script src="mission.js" defer></script>
 </head>
 <body>
