added refactoring by putting the submission functions into their own file.

--- a/Register/index.html
+++ b/Register/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="register.css" />
     <link rel="icon" href="favicon.png" type="image">
-    <script src="register.js" defer></script>
+    <script type="module" src="register.js" defer></script>
   </head>
   <body>
     <div class="testbox">
