starteed work on the recipe book page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="blog\index.html">Book blog</a>
         <a href="CreditCard/index.html">Credit Card Form</a>
         <a href="Register/index.html">Registration Form</a>
+        <a href="Recipes/index.html">Recipe Book</a>
     </main>
     <footer>
 
