added the recipe change and the search bar functionality

--- a/Recipes/index.html
+++ b/Recipes/index.html
@@ -33,27 +33,29 @@
     </header>
     <div class="separator"></div>
     <main>
-        <div class="recipe">
-            <img src="images/sweet-potato-waffle-md.jpg" alt="Image of sweet potato waffle">
-            <div class="content">
-                <div class="tags">
-                    <p>Waffles</p>
-                    <p>Sweet Potatoes</p>
-                    <p>Sides</p>
+        <div id="recipe-container">
+            <div class="recipe">
+                <img src="images/sweet-potato-waffle-md.jpg" alt="Image of sweet potato waffle">
+                <div class="content">
+                    <div class="tags">
+                        <p>Waffles</p>
+                        <p>Sweet Potatoes</p>
+                        <p>Sides</p>
+                    </div>
+                    <h1>Sweet Potato Waffles</h1>
+                    <span
+                        class="rating"
+                        role="img"
+                        aria-label="Rating: 4 out of 5 stars"
+                    >
+                        <span aria-hidden="true" class="icon-star">⭐</span>
+                        <span aria-hidden="true" class="icon-star">⭐</span>
+                        <span aria-hidden="true" class="icon-star">⭐</span>
+                        <span aria-hidden="true" class="icon-star-empty">⭐</span>
+                        <span aria-hidden="true" class="icon-star-empty">☆</span>
+                    </span>
+                    <p class="description">Savory waffles made with Sweet potato with a hint of Ginger.</p>
                 </div>
-                <h1>Sweet Potato Waffles</h1>
-                <span
-                    class="rating"
-                    role="img"
-                    aria-label="Rating: 4 out of 5 stars"
-                >
-                    <span aria-hidden="true" class="icon-star">⭐</span>
-                    <span aria-hidden="true" class="icon-star">⭐</span>
-                    <span aria-hidden="true" class="icon-star">⭐</span>
-                    <span aria-hidden="true" class="icon-star-empty">⭐</span>
-                    <span aria-hidden="true" class="icon-star-empty">☆</span>
-                </span>
-                <p class="description">Savory waffles made with Sweet potato with a hint of Ginger.</p>
             </div>
         </div>
     </main>
