site plan for final project

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="CreditCard/index.html">Credit Card Form</a>
         <a href="Register/index.html">Registration Form</a>
         <a href="Recipes/index.html">Recipe Book</a>
+        <a href="weddingannouncement/index.html">Wedding Announcement</a>
     </main>
     <footer>
 
