progress on my site, got the slides working in adventures and most of the css done

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="Register/index.html">Registration Form</a>
         <a href="Recipes/index.html">Recipe Book</a>
         <a href="weddingannouncement/index.html">Wedding Announcement</a>
+        <a href="site-plan/site-plan.html">Site-Plan</a>
     </main>
     <footer>
 
