--- a/weddingannouncement/index.html
+++ b/weddingannouncement/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="wedding.cs" />
+    <link rel="stylesheet" href="wedding.css" />
     <link rel="icon" href="favicon.png" type="image">
     <meta property="og:title" content="Wedding Announcement">
     <meta property="og:type" content="website" />
@@ -18,9 +18,56 @@
     <meta property="og:image" content="images/twinfallscanyon.jpg">
     <meta property="og:url" content="https://brackenhibbert.github.io/wdd131/weddingannouncement/index.html">
     <meta name="twitter:card" content="summary_large_image">
-    <script type="module" src="wedding.js" defer></script>
+    <script type="module" src="main.mjs" defer></script>
 </head>
 <body>
-    <a href="site-plan/site-plan.html">Site-Plan</a>
+    <header>
+      <img src="images/site-logo.png" alt="Wedding Announcement Logo" class="header-logo">
+      <section class="navigation">
+        <a href="index.html">Home</a>
+        <a href="ourstory.html">Our Story</a>
+        <a href="adventures.html">Our Adventures</a>
+      </section>
+    </header>
+    <main class="main-page">
+      <section>
+        <h1 id="countdown">Countdown until wedding</h1>
+      </section>
+      <section id="wedding-date">
+        <h1>Our Wedding</h1>
+        <p>August XX 2025</p>
+      </section>
+      <section id="missouri-reception">
+        <h1>Missouri Reception</h1>
+        <p>August XX 2025</p>
+        <p>Location: XXXXXX</p>
+      </section>
+      <section id="oregon-reception">
+        <h1>Oregon Reception</h1>
+        <p>August XX 2025</p>
+        <p>Location: XXXXXX</p>
+      </section>
+      <a href="*" class="registery">Wedding Registery</a>
+    </main>
+    <footer class="footer">
+      <section class="madie-links">
+        <h1>Madie</h1>
+        <a href="facebook.com">
+          <img src="images/facebook-icon.png" alt="facebook logo">
+        </a>
+        <a href="instagram.com">
+          <img src="images/instagram-icon.jpg" alt="instagram logo">
+        </a>
+      </section>
+      <section class="bracken-links">
+        <h1>Bracken</h1>
+        <a href="facebook.com">
+          <img src="images/facebook-icon.png" alt="facebook logo">
+        </a>
+        <a href="instagram.com">
+          <img src="images/instagram-icon.jpg" alt="instagram logo">
+        </a>
+      </section>
+    </footer>
 </body>
 </html>
