Added countdown timer and more css for formatting

--- a/weddingannouncement/index.html
+++ b/weddingannouncement/index.html
@@ -31,23 +31,34 @@
     </header>
     <main class="main-page">
       <section>
-        <h1 id="countdown">Countdown until wedding</h1>
+        <div id="countdown">
+          <h1>Countdown until wedding</h1>
+          <p><span id="days"></span> Days</p>
+          <p><span id="hours"></span> Hours</p>
+          <p><span id="minutes"></span> Minutes</p>
+        </div>
       </section>
       <section id="wedding-date">
         <h1>Our Wedding</h1>
-        <p>August XX 2025</p>
+        <p>Rexburg, Idaho Temple</p>
+        <p>August 16 2025</p>
       </section>
       <section id="missouri-reception">
         <h1>Missouri Reception</h1>
-        <p>August XX 2025</p>
-        <p>Location: XXXXXX</p>
+        <p>August 23 2025</p>
+        <p>1PM - 4PM</p>
+        <p>Location: Missouri Park, Missouri Street, Kansas City, MO 12345</p>
       </section>
       <section id="oregon-reception">
         <h1>Oregon Reception</h1>
-        <p>August XX 2025</p>
-        <p>Location: XXXXXX</p>
+        <p>August 30 2025</p>
+        <p>1PM - 4PM</p>
+        <p>Location: Montgomery Farm, Ontario Oregon, 97914</p>
       </section>
-      <a href="*" class="registery">Wedding Registery</a>
+      <section id="registery-section">
+        <a href="*" class="registery">Wedding Registery</a>
+        <p>Please Support us by clicking on the link above!</p>
+      </section>
     </main>
     <footer class="footer">
       <section class="madie-links">
