Added media querues and finished up css and final touches

--- a/weddingannouncement/adventures.html
+++ b/weddingannouncement/adventures.html
@@ -21,38 +21,41 @@
     <script type="module" src="main.mjs" defer></script>
 </head>
 <body>
-    <header>
-        <img src="images/site-logo.png" alt="Wedding Announcement Logo" class="header-logo">
-        <section class="navigation">
-            <a href="index.html">Home</a>
-            <a href="ourstory.html">Our Story</a>
-            <a href="adventures.html">Our Adventures</a>
-        </section>
-    </header>
+  <header>
+    <img src="images/site-logo.png" alt="Wedding Announcement Logo" class="header-logo">
+    <button class="menu-toggle">MENU ☰</button>
+    <section class="navigation">
+      <a href="index.html">Home</a>
+      <a href="ourstory.html">Our Story</a>
+      <a href="adventures.html">Our Adventures</a>
+    </section>
+  </header>
     <main>
         <section id="adventure">
             <div id="slide"></div>
-            <button id="prev">Previous</button>
-            <button id="next">Next</button>
+            <section class="button">
+              <button id="prev">Previous</button>
+              <button id="next">Next</button>
+            </section>
         </section>
         
     </main>
     <footer class="footer">
         <section class="madie-links">
           <h1>Madie</h1>
-          <a href="facebook.com">
+          <a href="https://www.facebook.com/profile.php?id=100085699340565">
             <img src="images/facebook-icon.png" alt="facebook logo">
           </a>
-          <a href="instagram.com">
+          <a href="https://www.instagram.com/madiebebel/">
             <img src="images/instagram-icon.jpg" alt="instagram logo">
           </a>
         </section>
         <section class="bracken-links">
           <h1>Bracken</h1>
-          <a href="facebook.com">
+          <a href="https://www.facebook.com/Bracken.W.Hibbert">
             <img src="images/facebook-icon.png" alt="facebook logo">
           </a>
-          <a href="instagram.com">
+          <a href="https://www.instagram.com/bracken.w.hibbert/">
             <img src="images/instagram-icon.jpg" alt="instagram logo">
           </a>
         </section>
