--- a/weddingannouncement/index.html
+++ b/weddingannouncement/index.html
@@ -23,6 +23,7 @@
 <body>
     <header>
       <img src="images/site-logo.png" alt="Wedding Announcement Logo" class="header-logo">
+      <button class="menu-toggle">MENU ☰</button>
       <section class="navigation">
         <a href="index.html">Home</a>
         <a href="ourstory.html">Our Story</a>
@@ -63,19 +64,19 @@
     <footer class="footer">
       <section class="madie-links">
         <h1>Madie</h1>
-        <a href="facebook.com">
+        <a href="https://www.facebook.com/profile.php?id=100085699340565">
           <img src="images/facebook-icon.png" alt="facebook logo">
         </a>
-        <a href="instagram.com">
+        <a href="https://www.instagram.com/madiebebel/">
           <img src="images/instagram-icon.jpg" alt="instagram logo">
         </a>
       </section>
       <section class="bracken-links">
         <h1>Bracken</h1>
-        <a href="facebook.com">
+        <a href="https://www.facebook.com/Bracken.W.Hibbert">
           <img src="images/facebook-icon.png" alt="facebook logo">
         </a>
-        <a href="instagram.com">
+        <a href="https://www.instagram.com/bracken.w.hibbert/">
           <img src="images/instagram-icon.jpg" alt="instagram logo">
         </a>
       </section>
