--- a/weddingannouncement/ourstory.html
+++ b/weddingannouncement/ourstory.html
@@ -21,19 +21,21 @@
     <script type="module" src="main.mjs" defer></script>
 </head>
 <body>
-    <header>
-        <img src="images/site-logo.png" alt="Wedding Announcement Logo" class="header-logo">
-        <section class="navigation">
-            <a href="index.html">Home</a>
-            <a href="ourstory.html">Our Story</a>
-            <a href="adventures.html">Our Adventures</a>
-        </section>
-    </header>
+  <header>
+    <img src="images/site-logo.png" alt="Wedding Announcement Logo" class="header-logo">
+    <button class="menu-toggle">MENU ☰</button>
+    <section class="navigation">
+      <a href="index.html">Home</a>
+      <a href="ourstory.html">Our Story</a>
+      <a href="adventures.html">Our Adventures</a>
+    </section>
+  </header>
     <main id="main-story">
-        <img src="images/idaho-falls-aquarium.jpg" alt="Picture of Madie and Bracken">
         <section id="our-story">
             <h1>Our Story</h1>
-            <p>Bracken and Madie first met when Madie moved to Virginia while they were both in high school. They became fast friends through time spent together in band class and 
+            <p>
+              <img src="images/idaho-falls-aquarium.jpg" alt="Picture of Madie and Bracken">
+              Bracken and Madie first met when Madie moved to Virginia while they were both in high school. They became fast friends through time spent together in band class and 
 				at church. As they both got into High School they stayed good friends and spent a lot of time together at church activites like mutual, dances, and trek, and at 
 				school in band class and seeing each other in the hallways and cafeteria. Madie moved back to Missouri in the fall of 2019 and they did not think they would see 
 				each other again. <br> <br>
@@ -63,19 +65,19 @@
     <footer class="footer">
         <section class="madie-links">
           <h1>Madie</h1>
-          <a href="facebook.com">
+          <a href="https://www.facebook.com/profile.php?id=100085699340565">
             <img src="images/facebook-icon.png" alt="facebook logo">
           </a>
-          <a href="instagram.com">
+          <a href="https://www.instagram.com/madiebebel/">
             <img src="images/instagram-icon.jpg" alt="instagram logo">
           </a>
         </section>
         <section class="bracken-links">
           <h1>Bracken</h1>
-          <a href="facebook.com">
+          <a href="https://www.facebook.com/Bracken.W.Hibbert">
             <img src="images/facebook-icon.png" alt="facebook logo">
           </a>
-          <a href="instagram.com">
+          <a href="https://www.instagram.com/bracken.w.hibbert/">
             <img src="images/instagram-icon.jpg" alt="instagram logo">
           </a>
         </section>
